<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".campaigns.fragments.CreateCampaignFragment"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_campaign_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campaign_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/create_campaign_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campaign_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_campaign_button_text"
            app:backgroundTint="@color/colorAccent" />


    </LinearLayout>
</layout>